fix: [facets] DCT-128 | Wrapped ColorSwatch and ImageColorPicker toolkits in Prism element

--- a/packages/facets/src/components/Facets/ColorWall/ColorChipLocator/ColorChipLocator.scss
+++ b/packages/facets/src/components/Facets/ColorWall/ColorChipLocator/ColorChipLocator.scss
@@ -27,24 +27,24 @@
   }
 
   &__swatch {
-    padding: 1.25rem;
+    padding: 1.25rem !important;
     border: 1px solid #fff;
   }
 
   &__name {
-    padding-bottom: 0.3rem;
+    padding-bottom: 0.3rem !important;
     font-size: 1.125rem;
     font-weight: 550;
   }
 
   &__number {
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.75rem !important;
     font-style: italic;
     font-weight: 400;
   }
 
   &__location {
-    padding-bottom: 0.3rem;
+    padding-bottom: 0.3rem !important;
     font-size: 1.125rem;
     font-weight: 550;
   }
@@ -55,7 +55,7 @@
   }
 
   &__row {
-    margin-top: 0.2rem;
+    margin-top: 0.2rem !important;
     font-style: italic;
     font-weight: 400;
     line-height: 1.1rem;
@@ -63,9 +63,9 @@
 
   &__button {
     width: 8.3rem;
-    margin-top: 0.75rem;
-    margin-bottom: 1rem;
-    padding: 0.4rem;
+    margin-top: 0.75rem !important;
+    margin-bottom: 1rem !important;
+    padding: 0.4rem !important;
     border: 1px solid black;
     border-radius: 15px;
     font-size: 1rem;
